[package]
name = "ross-api"
version = "0.1.0"
authors = ["Linas Nikiperavičius <linas@linasdev.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "API for the Rusty Old Smart System"
repository = "https://github.com/linasdev/ross-api"
readme = "README.md"

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serialport = "4.0.1"
ross-configurator = "1.6.0"

[dependencies.serde]
version = "1.0.131"
features = ["derive"]

[dependencies.ross-protocol]
version = "2.8.0"
features = ["std", "send"]
